core: Replace classic threads with virtuals