@@ -21,13 +21,13 @@ import java.util.stream.Collectors;
 import javafx.scene.Node;
 import javax.swing.JFileChooser;
 import org.controlsfx.control.action.Action;
-import se.trixon.almond.nbp.FileChooserHelper;
 import org.mapton.api.MNotificationIcons;
 import static org.mapton.api.Mapton.getIconSizeToolBarInt;
 import org.openide.awt.NotificationDisplayer;
 import org.openide.filesystems.FileChooserBuilder;
 import org.openide.util.Exceptions;
 import se.trixon.almond.nbp.Almond;
+import se.trixon.almond.nbp.FileChooserHelper;
 import se.trixon.almond.util.Dict;
 import se.trixon.almond.util.fx.FxActionSwing;
 import se.trixon.almond.util.icons.material.MaterialIcon;
@@ -63,7 +63,7 @@ public class FileExportAction extends FileAction {
                         .createFileChooser();
 
                 if (fileChooser.showSaveDialog(Almond.getFrame()) == JFileChooser.APPROVE_OPTION) {
-                    new Thread(() -> {
+                    Thread.ofVirtual().name(getClass().getCanonicalName()).start(() -> {
                         var file = FileChooserHelper.getFileWithProperExt(fileChooser);
                         try {
                             mManager.gridExport(file, selectedGrids);
@@ -77,7 +77,7 @@ public class FileExportAction extends FileAction {
                         } catch (IOException ex) {
                             Exceptions.printStackTrace(ex);
                         }
-                    }, getClass().getCanonicalName()).start();
+                    });
                 }
             }
         });
